overflow fixed and navbar changes

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 @layer components{
   .section-class {
     @apply min-h-screen w-full text-white flex bg-gradient-to-r from-zinc-800 to-stone-600 items-center
